apps/nginx-multi-env/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-multi-env
spec:
  selector:
    app: nginx-multi-env
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
